# Weather-eval

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  initial-plan.md
.github/workflows/: ci.yml  deploy.yml  terraform.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  geo.py  main.py  schemas.py  weather_metrics.py
backend/scripts/: build_cloud_aggregates.py  build_lightning_aggregates.py  build_station_index.py  common.py  fetch_cloud_raw.py  fetch_lightning_raw.py  run_pipeline.py  seed_firestore.py  validate_aggregates.py
backend/tests/: test_main.py  test_metrics.py
docs/: phase-1.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
infra/: main.tf  terraform.tfvars.example  variables.tf
infra/bootstrap/: main.tf  variables.tf
scripts/: upload_processed_to_gcs.sh
